vlib/v/checker/tests/incorrect_name_enum_field.out
vlib/v/checker/tests/incorrect_name_enum_field.vv:2:2: error: field name `Green` cannot contain uppercase letters, use snake_case instead
    1 | enum Color {
    2 |     Green
      |     ~~~~~
    3 |     red
    4 |     blue
