vlib/v/checker/tests/incorrect_name_enum_field.vv
enum Color {
	Green
	red
	blue
}
